--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="navbar">
         <div class="logo">API STUDY</div>
         <ul class="navlink">
-            <li><a href="index.html">This Repo</a></li>
+            <li><a href="https://github.com/king-julien-007/Sentimentchecker">This Repo</a></li>
             <li><a href="https://github.com/king-julien-007" target="_blank">GitHub</a></li>
             <li><a href="mailto:1anjaan.kallara@gmail.com">Contact</a></li>
         </ul>
